--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "uwuchat2": "0.0.4"
+    "immutable": "^4.3.7",
+    "uwuchat2": "^0.0.4"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
